--- a/flask/src/templates/index.html
+++ b/flask/src/templates/index.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 <form method="post" enctype="multipart/form-data" action="/">
-      <input type="file" name="file">
+      <input type="file" name="files" multiple="">
       <input type="submit" value="Upload">
 
       <label for="separator">choose a separator:</label>
