--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,6 @@
 {{ super() }}
 <link rel="shortcut icon" href="#">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'your_analytiks_tag');
-</script>
 {% endblock %}
 
 {% block html_attribs %} lang="en"{% endblock %}
@@ -56,7 +49,7 @@
           <div id="enc_help" class="form-text">{{ start_form.encoding_sel.description }}</div>
 
         </div>
-        <button class="form-group btn btn-primary btn-lg" type="submit">Start Conversion</button>
+        <button id='submit' class="form-group btn btn-primary btn-lg" type="submit">Start Conversion</button>
       </form>
 
     </div>
