--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,6 @@
             {{ start_form.separator_sel.label }}
             {{ start_form.separator_sel(class="form-control", **{'aria-describedby': 'sep_help'}) }}
           <div id="sep_help" class="form-text">{{ start_form.separator_sel.description }}</div>
-          </div>
             {{ start_form.header_separator_sel.label }}
             {{ start_form.header_separator_sel(class="form-control", **{'aria-describedby': 'sep_help'}) }}
           <div id="header_sep_help" class="form-text">{{ start_form.header_separator_sel.description }}</div>
@@ -47,31 +46,31 @@
             {{ start_form.encoding_sel.label }}
             {{ start_form.encoding_sel(class="form-control", **{'aria-describedby': 'enc_help'}) }}
           <div id="enc_help" class="form-text">{{ start_form.encoding_sel.description }}</div>
-
-        </div>
         <button id='submit' class="form-group btn btn-primary btn-lg" type="submit">Start Conversion</button>
+        </div>
       </form>
-
     </div>
-    {% with messages = get_flashed_messages() %}
-    <div class="container-fluid collapse {% if messages or result %} show {% endif %}" id="mappingForm">
+    {% with messages = get_flashed_messages(with_categories=True) %}
+    <div class="container-fluid collapse p-0 pb-3 {% if messages %} show {% endif %}" id="messages">
+      <div class="card card-body">
+        <h5 class="card-title">Messages</h5>
+        {% if messages %}
+          {% for category, message in messages %}
+          <div class="alert alert-{{'danger' if category=='error' else category}}" role="alert">{{ message }}</div>
+          {% endfor %}
+        {% endif %}
+      </div>
+    </div>
+    {% endwith %}
+
+    <div class="container-fluid collapse p-0 pb-3 {% if result %} show {% endif %}" id="results">
       <div class="card card-body">
         <h5 class="card-title">Result</h5>
-        {% if messages %}
-        <div class="alert alert-primary" role="alert">
-            <ul class=flashes>
-            {% for message in messages %}
-              <li>{{ message }}</li>
-            {% endfor %}
-            </ul>
-        </div>
-        {% endif %}
         <code class="prettyprint" style="white-space: pre-wrap;">{{ result }}</code>
       </div>
       <a class="form-group btn btn-primary btn-lg my-3" download="{{ filename }}" href="data:text/json;base64,{{ payload }}" role="button">Download</a>
     </div>
-    {% endwith %}
-</main>
+  </main>
 <footer class="pt-3 my-4 text-center text-muted border-top">
   <span class="site-footer-owner"><a href="https://github.com/Mat-O-Lab/CSVtoCSVW">CSVtoCSVW</a> is maintained by <a href="https://matolab.org"><img src="{{ logo }}" width="5%" alt="mat-o-lab-logo"/></a>.</span>
 </footer>
