--- a/templates/index.html
+++ b/templates/index.html
@@ -36,16 +36,28 @@
                 </ul>
             {% endif %}
           </div>
-            {{ start_form.separator_sel.label }}
-            {{ start_form.separator_sel(class="form-control", **{'aria-describedby': 'sep_help'}) }}
+          {{ start_form.separator_sel.label }}
+          {{ start_form.separator_sel(class="form-control", **{'aria-describedby': 'sep_help'}) }}
           <div id="sep_help" class="form-text">{{ start_form.separator_sel.description }}</div>
-            {{ start_form.header_separator_sel.label }}
-            {{ start_form.header_separator_sel(class="form-control", **{'aria-describedby': 'sep_help'}) }}
+
+          {{ start_form.header_separator_sel.label }}
+          {{ start_form.header_separator_sel(class="form-control", **{'aria-describedby': 'sep_help'}) }}
           <div id="header_sep_help" class="form-text">{{ start_form.header_separator_sel.description }}</div>
 
-            {{ start_form.encoding_sel.label }}
-            {{ start_form.encoding_sel(class="form-control", **{'aria-describedby': 'enc_help'}) }}
+          {{ start_form.encoding_sel.label }}
+          {{ start_form.encoding_sel(class="form-control", **{'aria-describedby': 'enc_help'}) }}
           <div id="enc_help" class="form-text">{{ start_form.encoding_sel.description }}</div>
+
+          <div class="form-group mb-3 mt-3">
+              <label>Options</label>
+              <div class="form-check form-control-lg form-switch">
+                {{ start_form.include_table_data.label }}
+                {{ start_form.include_table_data(class="form-check-input", **{'aria-describedby': 'include_table_data_help'}) }}
+              </div>
+              <div id="include_table_data_help" class="form-check-label">{{ start_form.include_table_data.description }}</div>
+            </div>
+          </div>
+          
         <button id='submit' class="form-group btn btn-primary btn-lg" type="submit">Start Conversion</button>
         </div>
       </form>
