--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 {% block head %}
 {{ super() }}
+
 <link rel="shortcut icon" href="#">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 {% endblock %}
@@ -84,7 +85,7 @@
     </div>
   </main>
 <footer class="pt-3 my-4 text-center text-muted border-top">
-  <span class="site-footer-owner"><a href="https://github.com/Mat-O-Lab/CSVtoCSVW">CSVtoCSVW</a> is maintained by <a href="https://matolab.org"><img src="{{ logo }}" width="5%" alt="mat-o-lab-logo"/></a>.</span>
+  <span class="site-footer-owner"><a href="https://github.com/Mat-O-Lab/CSVtoCSVW">CSVtoCSVW</a> is maintained by <a href="https://matolab.org"><img src="{{ url_for('static', path='/resources/MatOLab-Logo.svg') }}" width="5%" alt="mat-o-lab-logo"/></a>.</span>
 </footer>
 {% endblock %}
 
