--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
       <p class="col-md-12 ps-0 fs-4">
         Generates JSON-LD for various types of CSVs, it adopts the Vocabulary provided by w3c at <a href="https://www.w3.org/ns/csvw">CSVW</a> to describe structure and information within. Also uses <a href="https://github.com/qudt/qudt-public-repo/tree/main/vocab/unit">QUDT units ontology </a> to lookup and describe units.
       </p>
-      <form class='pb-3' method="post" action="{{ url_for('index') }}">
+      <form id=input-form class='pb-3' method="post" action="{{ url_for('api') }}">
         <div class="mb-3">
           {{ start_form.csrf_token }}
           {{ start_form.data_url.label }}
@@ -75,13 +75,16 @@
       </div>
     </div>
     {% endwith %}
-
-    <div class="container-fluid collapse p-0 pb-3 {% if result %} show {% endif %}" id="results">
+    <div class="container-fluid collapse p-0 pb-3 {% if result %} show {% endif %}" id="results" >
       <div class="card card-body">
         <h5 class="card-title">Result</h5>
-        <code class="prettyprint" style="white-space: pre-wrap;">{{ result }}</code>
+        <div class="spinner-border text-primary" 
+          id="spinner" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+        <code id="data" class="prettyprint language-json overflow-auto" style="white-space: pre-wrap; max-height: 500px;">{{ result }}</code>
       </div>
-      <a class="form-group btn btn-primary btn-lg my-3" download="{{ filename }}" href="data:text/json;base64,{{ payload }}" role="button">Download</a>
+      <a id="download" class="form-group btn btn-primary btn-lg my-3" download="{{ filename }}" href="data:text/json;base64,{{ payload }}" role="button">Download</a>
     </div>
   </main>
 <footer class="pt-3 my-4 text-center text-muted border-top">
@@ -90,6 +93,93 @@
 {% endblock %}
 
 {% block scripts %}
+<script>
+// Function to hide the Spinner
+function hideSpinner() {
+    document.getElementById('spinner').style.display = 'none';
+}
+function showSpinner() {
+    document.getElementById('spinner').style.removeProperty("display");
+}
+
+function getCookie(name) {
+  if (!document.cookie) {
+    return null;
+  }
+  const xsrfCookies = document.cookie.split(';')
+    .map(c => c.trim())
+    .filter(c => c.startsWith(name + '='));
+
+  if (xsrfCookies.length === 0) {
+    return null;
+  }
+  return decodeURIComponent(xsrfCookies[0].split('=')[1]);
+}
+function formDataAsJson({ formData }) {
+  const plainFormData = Object.fromEntries(formData.entries());
+  console.log(plainFormData.data_url);
+  if (plainFormData.data_url=='') {
+    plainFormData.data_url=document.getElementById('data_url').placeholder
+  }
+  const formDataJsonString = JSON.stringify(plainFormData);
+  var csrf = getCookie('csrftoken');
+  const request = {
+    credentials: "same-origin",
+    mode: "same-origin",
+    method: "post",
+    headers: {
+      'Content-Type': 'application/json',
+      Accept: 'application/json',
+      'X-CSRF-Token': csrf, // 👈👈👈 Set the token
+    },
+    body: formDataJsonString
+  };
+  return request;
+}
+
+async function postForm({ url, request }) {
+  const response = await fetch(url, request);
+  if (!response.ok) {
+    const errorMessage = await response.text();
+    throw new Error(errorMessage);
+  }
+  return response.json();
+}
+async function handleFormSubmit(event) {
+  // $('#result').collapse('show');
+	event.preventDefault();
+  document.getElementById("data").innerText = '';
+  showSpinner();
+  document.getElementById('results').classList.add('show');
+	const form = event.currentTarget;
+	const url = form.action;
+  try {
+		const formData = new FormData(form);
+    const request = await formDataAsJson({formData});
+    const responseData = await postForm({ url, request });
+    localStorage.setItem("responseData", JSON.stringify(responseData));
+	} catch (error) {
+		console.error(error);
+	}
+  finally{
+    let text = localStorage.getItem("responseData");
+    if (text) {
+      hideSpinner();
+      const result_json=JSON.parse(text);
+      var dlButton = document.getElementById("download");
+      var dataStr = "data:text/json;charset=utf-8," + encodeURIComponent(JSON.stringify(result_json.filedata), null, 2);
+      dlButton.setAttribute("href", dataStr );
+      dlButton.setAttribute("download", result_json.filename);
+      console.log(result_json.filedata);
+      document.getElementById("data").innerText = JSON.stringify(result_json.filedata, null, 2);
+      document.getElementById("data").classList.remove('prettyprinted')
+      PR.prettyPrint()
+    }
+  }
+}
+const exampleForm = document.getElementById("input-form");
+exampleForm.addEventListener("submit", handleFormSubmit);
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?lang=css&amp;skin=sunburst"></script>
 {{super()}}
