--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
           {{ start_form.encoding(class="form-control", **{'aria-describedby': 'enc_help'}) }}
           <div id="enc_help" class="form-text">{{ start_form.encoding.description }}</div>
 
-          <div class="form-group mb-3 mt-3">
+          <div class="form-group mb-3">
               <label>Options</label>
               <div class="form-check form-control-lg form-switch">
                 {{ start_form.include_table_data.label }}
@@ -60,7 +60,7 @@
             </div>
           </div>
           
-        <button id='submit' class="form-group btn btn-primary btn-lg" type="submit">Start Conversion</button>
+        <button id='submit' class="form-group btn btn-primary btn-lg mt-3" type="submit">Start Conversion</button>
         </div>
       </form>
     </div>
