--- a/templates/index.html
+++ b/templates/index.html
@@ -23,43 +23,31 @@
       <p class="col-md-12 ps-0 fs-4">
         Generates JSON-LD for various types of CSVs, it adopts the Vocabulary provided by w3c at <a href="https://www.w3.org/ns/csvw">CSVW</a> to describe structure and information within. Also uses <a href="https://github.com/qudt/qudt-public-repo/tree/main/vocab/unit">QUDT units ontology </a> to lookup and describe units.
       </p>
-      <form id=input-form class='pb-3' method="post" action="{{ url_for('api') }}">
+      <form id=input-form class='pb-3' method="post" action="{{ url_for('annotation') }}">
         <div class="mb-3">
           {{ start_form.csrf_token }}
-          {{ start_form.data_url.label }}
-          {{ start_form.data_url(class="form-control", **{'aria-describedby': 'urlHelp'}) }}
-          <div id="urlHelp" class="form-text">{{ start_form.data_url.description }}</div>
-          <div class="invalid-feedback">
-            {% if start_form.data_url.errors %}
-                <ul class="errors">
-                {% for error in start_form.data_url.errors %}
-                    <li>{{ error }}</li>
-                {% endfor %}
-                </ul>
+          {% for item in start_form if item.widget.input_type != 'hidden' %}
+          <div class="mb-3">
+            {% if item.label.text=='Advanced' %} 
+            <button class="btn btn-secondary mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#{{item.id}}" aria-expanded="false" aria-controls="{{item.id}}">
+              {{item.label.text}}
+            </button>
+            {% else %}
+            {{ item.label(class="form-label")}}
             {% endif %}
-          </div>
-          {{ start_form.separator.label }}
-          {{ start_form.separator(class="form-control", **{'aria-describedby': 'sep_help'}) }}
-          <div id="sep_help" class="form-text">{{ start_form.separator.description }}</div>
-
-          {{ start_form.header_separator.label }}
-          {{ start_form.header_separator(class="form-control", **{'aria-describedby': 'sep_help'}) }}
-          <div id="header_sep_help" class="form-text">{{ start_form.header_separator.description }}</div>
-
-          {{ start_form.encoding.label }}
-          {{ start_form.encoding(class="form-control", **{'aria-describedby': 'enc_help'}) }}
-          <div id="enc_help" class="form-text">{{ start_form.encoding.description }}</div>
-
-          <div class="form-group mb-3">
-              <label>Options</label>
-              <div class="form-check form-control-lg form-switch">
-                {{ start_form.include_table_data.label }}
-                {{ start_form.include_table_data(class="form-check-input", **{'aria-describedby': 'include_table_data_help'}) }}
-              </div>
-              <div id="include_table_data_help" class="form-check-label">{{ start_form.include_table_data.description }}</div>
+            {{ item }}
+            <div class="invalid-feedback">
+              {% if item.errors %}
+                  <ul class="errors">
+                  {% for error in item.errors %}
+                      <li>{{ error }}</li>
+                  {% endfor %}
+                  </ul>
+              {% endif %}
             </div>
+            <div id="methodHelp" class="form-text">{{ item.description }}</div>
           </div>
-          
+        {% endfor %}
         <button id='submit' class="form-group btn btn-primary btn-lg mt-3" type="submit">Start Conversion</button>
         </div>
       </form>
