--- a/templates/base.html
+++ b/templates/base.html
@@ -3,15 +3,18 @@
 <html{% block html_attribs %}{% endblock html_attribs %}>
 {%- block html %}
   <head>
-    <meta charset="utf-8" />
     {%- block head %}
-    <title>{% block title %}{{title|default}}{% endblock title %}</title>
-
     {%- block metas %}
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="origin" name="referrer">
+    <meta http-equiv="Cache-control" content="public">
     {%- endblock metas %}
-
+    <title>{% block title %}{% endblock title %}</title>
+    <link rel="icon" type="image/svg+xml" href="{{ url_for('static', path='/resources/favicon.svg') }}">
+    <link rel="shortcut icon" href="#">
     {%- block styles %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     {%- endblock styles %}
     {%- endblock head %}
   </head>
@@ -23,6 +26,7 @@
     {%- endblock content %}
 
     {% block scripts %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     {%- endblock scripts %}
     {%- endblock body %}
   </body>
