fixed static logos

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 {% block content %}
 <header class="pb-3 mb-4 border-bottom">
       <a href="/" class="d-flex align-items-center text-dark text-decoration-none m-3 pb-1">
-        <img class='me-3' src="{{ url_for('static', path='/resources/MatOLab-Logo.svg') }}" height="30" alt="mat-o-lab-logo"/>
+        <img class='me-3' src="{{ url_for('static', path='/resources/Logo.svg') }}" height="30" alt="mat-o-lab-logo"/>
       </a>
 </header>
 <main class="bg-light rounded-3 px-3">
@@ -77,7 +77,7 @@
     </div>
   </main>
 <footer class="pt-3 my-4 text-center text-muted border-top">
-  <span class="site-footer-owner"><a href="https://github.com/Mat-O-Lab/CSVtoCSVW">CSVtoCSVW</a> is maintained by <a href="https://matolab.org"><img src="{{ url_for('static', path='/resources/MatOLab-Logo.svg') }}" width="5%" alt="mat-o-lab-logo"/></a>.</span>
+  <span class="site-footer-owner"><a href="https://github.com/Mat-O-Lab/CSVtoCSVW">CSVtoCSVW</a> is maintained by <a href="https://matolab.org"><img src="{{ url_for('static', path='/resources/Logo.svg') }}" width="5%" alt="mat-o-lab-logo"/></a>.</span>
 </footer>
 {% endblock %}
 
